fix unadded routes
