# app/models/request.go
@@ -21,12 +21,12 @@ type DashboardStats struct {
 }
 
 type CreateProductRequest struct {
-	Name        string  `json:"name" validate:"required"`
-	Description string  `json:"description"`
-	Price       float64 `json:"price" validate:"required,gt=0"`
-	Stock       int     `json:"stock" validate:"required,gte=0"`
-	Category    string  `json:"category"`
-	ImageURL    string  `json:"image_url" validate:"required"`
+	Name        string   `json:"name" validate:"required"`
+	Description string   `json:"description"`
+	Price       float64  `json:"price" validate:"required,gt=0"`
+	Stock       int      `json:"stock" validate:"required,gte=0"`
+	Category    string   `json:"category"`
+	Images      []string `json:"images"`
 }
 
 type UpdateProductRequest struct {
