# app/routes/store_routes.go
@@ -8,6 +8,9 @@ import (
 func StoreRoutes(app fiber.Router) {
 	stores := app.Group("/stores")
 
+	// Store creation
+	stores.Post("/create", controllers.CreateStore) // Updated path without :id
+
 	// Store management
 	stores.Put("/:id", controllers.UpdateStore)
 	stores.Delete("/:id", controllers.DeleteStore)
